Mirror project update from Overleaf

--- a/latexdefs.tex
+++ b/latexdefs.tex
@@ -152,3 +152,9 @@
 \newcommand{\rgets}{\mathrel{\mathpalette\rgetscmd\relax}}
 \newcommand{\getsr}{\rgets}
 
+\usepackage[
+backend=biber,
+style=alphabetic,
+sorting=ynt
+]{biblatex} % Bibliography
+\addbibresource{refs.bib}
